main.tf
provider "aws" {
  region  = "us-east-2"
  profile = "recommender-app"
}

resource "aws_key_pair" "deployer" {
  key_name   = "deployer-key"
  public_key = file("~/.ssh/id_ed25519.pub")
}

data "aws_ami" "amazon_linux" {
  most_recent = true
  owners      = ["amazon"]

  filter {
    name   = "name"
    values = ["amzn2-ami-hvm-*-x86_64-gp2"]
  }
}

data "aws_vpc" "default" {
  default = true
}

resource "aws_security_group" "ec2_sg" {
  name        = "ec2-sg"
  description = "Allow SSH and HTTP"
  vpc_id      = data.aws_vpc.default.id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "recommender_app" {
  ami             = data.aws_ami.amazon_linux.id
  instance_type   = "t3.micro"
  key_name        = aws_key_pair.deployer.key_name
  security_groups = [aws_security_group.ec2_sg.name]

  user_data = <<-EOF
              #!/bin/bash
              yum update -y
              yum install -y git
              amazon-linux-extras install docker -y
              curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
              chmod +x /usr/local/bin/docker-compose
              service docker start
              usermod -aG docker ec2-user

              # Clona o projeto
              cd /home/ec2-user
              git clone https://github.com/alessandroprudencio/recommender-app.git
              cd recommender-app
              
              # Copia arquivo .env local
              cat > .env << 'ENVEOF'
              ${file("${path.module}/.env")}
              ENVEOF
              
              docker-compose -f docker-compose.production.yml up -d
            EOF

  tags = {
    Name = "recommender-app"
  }
}

output "public_ip" {
  value = aws_instance.recommender_app.public_ip
}
